# PUROR_IEV

./: .gitignore  AccGadget (copy).cpp  AccGadget.cpp  AccGadget.h  AddMag.cpp  AddMag.cpp~  AddMag.h  AddMag.h~  AddMetaData.cpp  AddMetaData.h  AddSlopeIntercept.cpp  AddSlopeIntercept.h  CMakeLists.txt  ContrastGadget.cpp  ContrastGadget.h  DecImageIndex.cpp  DecImageIndex.h  DicomSave.cpp  ExtractMagGadget (copy).cpp  ExtractMagGadget (copy).h  ExtractMagGadget.cpp  ExtractMagGadget.h  FlipGadget.cpp  FlipGadget.h  GetMaskGadget.cpp  GetMaskGadget.cpp~  GetMaskGadget.h  GetMaskGadget.h~  HPFGadget.cpp  HPFGadget.cpp~  HPFGadget.h  IEVChannelSumGadget.cpp  IEVChannelSumGadget.cpp~  IEVChannelSumGadget.h  IEVChannelSumGadget.h~  ISMRMRDViewer.fig  ISMRMRDViewer.m  MagCombineGadget.cpp  Mask.cpp  Mask.h  (+27 more)
util/: .xml  add_uid  addattributestrings.cpp  addtesting  changestudyuid.cpp  checkmismatch.cpp  firststepext.cpp  setuprun
